# priority-model

./: .gitignore  Duracion Envio Solicitudes - clientes.csv  limpieza_.ipynb  main.py  prop_map.csv  pyproject.toml
config/: weights.yaml
data/: top_clientes.xlsx  top_clients.xlsx  top_profit.xlsx
src/: loaders.py  priority_calculator.py  standarization.py  transformers.py
src/prioridad/: __init__.py  loaders.py  priority_calculator.py  setup.py  transformers.py  utils.py
src/prioridad/priority_model.egg-info/: PKG-INFO  SOURCES.txt
src/priority_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
