[project]
name = "priority-model"
version = "0.1.0"
requires-python = ">=3.10"
description = "Modelo ponderado de prioridad para el RMS"
dependencies = [
    "pandas>=2.2",
    "rapidfuzz>=3.0",
    "unidecode>=1.3"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}     #  ⬅️  le decimos que los paquetes están en ./src
packages = ["prioridad"]        #  ⬅️  nombre del paquete dentro de src (ajústalo)
